add: 기본 데이터 입력 소스 샘플 실행
1. 트랜잭션 생성
2. 데이터 커밋/롤백 추가

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
             <artifactId>h2</artifactId>
             <version>1.4.200</version>
         </dependency>
+        <!--JDK11에서 JAXB라이브러리를 내장하고 있지 않아 추가 의존성 추가해야함-->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
